rerun and fix bug
