# src/configs/swagger/swagger-output.json
@@ -399,6 +399,30 @@
         }
       }
     },
+    "/api/users/getProfile": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Get user profile",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/users/{id}": {
       "get": {
         "tags": [
@@ -427,12 +451,28 @@
         }
       }
     },
-    "/api/users/profile": {
-      "get": {
+    "/api/users/{id}/{is_active}": {
+      "put": {
         "tags": [
           "Users"
         ],
-        "description": "Get user profile",
+        "description": "Change user active status",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User ID"
+          },
+          {
+            "name": "is_active",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Active status"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -443,12 +483,7 @@
           "500": {
             "description": "Internal Server Error"
           }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
+        }
       }
     },
     "/api/posts/{id}": {
